--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,13 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^2.9.2",
+    "@latticexyz/common": "2.0.9",
+    "@latticexyz/faucet": "2.0.9",
+    "@primodiumxyz/core": "workspace:*",
+    "@primodiumxyz/reactive-tables": "^3.2.0",
+    "@privy-io/react-auth": "^1.72.0",
+    "contracts": "workspace:*",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "viem": "2.9.20"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -19,10 +28,19 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.8",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "postcss": "^8.4.38",
+    "prettier": "^2.6.2",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.1",
+    "vite-plugin-comlink": "^3.0.5",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^0.32.4"
   }
 }
