--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -55,7 +55,7 @@
     "happy-dom": "^14.12.0",
     "jsdom": "^24.1.0",
     "tsup": "^8.1.0",
-    "typescript": "5.5.0-beta",
+    "typescript": "5.5.2",
     "vitest": "^0.32.4"
   },
   "publishConfig": {
