--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -19,7 +19,7 @@
     "lint": "pnpm run prettier && pnpm run solhint",
     "prettier": "prettier --write './**/*.sol'",
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
-    "test": "forge build && mud test --skipBuild"
+    "test": "forge build && mud test --skipBuild --forgeOptions='-vvv'"
   },
   "dependencies": {
     "@latticexyz/cli": "2.0.9",
