--- a/apps/web/.prettierrc.json
+++ b/apps/web/.prettierrc.json
@@ -8,5 +8,21 @@
   "semi": true,
   "useTabs": false,
   "quoteProps": "as-needed",
-  "requirePragma": false
+  "requirePragma": false,
+  "importOrder": [
+    "^@primodiumxyz/(.*)$",
+    "^(react/(.*)$)|^(react$)",
+    "<THIRD_PARTY_MODULES>",
+    "",
+    "^@/(.*)$",
+    "",
+    "^[./]"
+  ],
+  "importOrderSeparation": false,
+  "importOrderSortSpecifiers": true,
+  "importOrderBuiltinModulesToTop": true,
+  "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
+  "importOrderMergeDuplicateImports": true,
+  "importOrderCombineTypeAndValueImports": true,
+  "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"]
 }
