--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,7 +34,7 @@
     "@latticexyz/faucet": "2.0.9",
     "@latticexyz/store": "2.0.9",
     "@latticexyz/world-modules": "2.0.9",
-    "@primodiumxyz/reactive-tables": "^3.2.0",
+    "@primodiumxyz/reactive-tables": "^3.3.0",
     "@primodiumxyz/sync-stack": "^0.6.9",
     "abitype": "^1.0.2",
     "contracts": "workspace:*",
@@ -46,6 +46,7 @@
     "vite": "^3.2.3"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -54,6 +55,7 @@
     "debug": "^4.3.5",
     "happy-dom": "^14.12.0",
     "jsdom": "^24.1.0",
+    "prettier": "^3.3.2",
     "tsup": "^8.1.0",
     "typescript": "5.5.2",
     "vitest": "^0.32.4"
