--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "primodium-base",
-  "version": "1.0.0",
+  "name": "primodium-empires",
+  "version": "1.0.1",
   "description": "",
   "scripts": {
     "dev": "turbo dev",
