--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.1",
   "description": "",
   "scripts": {
-    "dev": "turbo dev",
+    "dev": "turbo dev dev:indexer",
     "build": "turbo build",
+    "clean:indexer": "pnpm clean-local-docker-indexer",
+    "dev:indexer": "pnpm clean-local-docker-indexer && pnpm local-docker-indexer",
     "build:contracts": "turbo --filter contracts build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@primodiumxyz/pg-indexer-reader": "^0.6.9",
     "turbo": "^2.0.4"
   },
   "packageManager": "pnpm@8.15.8",
