--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,25 +7,13 @@
   "author": "",
   "type": "module",
   "exports": {
-    ".": "./dist/index.js",
-    "./react": "./dist/react/index.js"
-  },
-  "typesVersions": {
-    "*": {
-      "index": [
-        "./dist/index.d.ts"
-      ],
-      "react": [
-        "./dist/react/index.d.ts"
-      ]
-    }
+    ".": "./src/index.js",
+    "./react": "./src/react/index.js"
   },
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
     "test": "vitest"
   },
   "dependencies": {
