--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,19 +1,10 @@
 {
+  "extends": "../../.tsconfigs/bundler/dom/library-monorepo.json",
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
-    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-    "strict": true /* Enable all strict type-checking options. */,
-    "moduleResolution": "Bundler",
-    "resolveJsonModule": true,
-    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@core/*": ["./src/*"],
     },
-    "typeRoots": ["./types", "./global.d.ts"],
-    "jsx": "react-jsx",
-    "jsxImportSource": "react"
   },
+  "exclude": ["node_modules", "dist"],
   "include": ["./src/**/*"],
 }
