fix: jsx types on core

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,6 +4,8 @@
     "paths": {
       "@core/*": ["./src/*"],
     },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   },
   "exclude": ["node_modules", "dist"],
   "include": ["./src/**/*"],
