--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.9.2",
+    "@heroicons/react": "^2.1.4",
     "@latticexyz/common": "2.0.9",
     "@latticexyz/faucet": "2.0.9",
     "@primodiumxyz/core": "workspace:*",
