--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,7 +25,7 @@
     "@primodiumxyz/reactive-tables": "^3.3.0",
     "@primodiumxyz/sync-stack": "^0.6.9",
     "abitype": "^1.0.2",
-    "contracts": "workspace:*",
+    "@primodiumxyz/contracts": "workspace:*",
     "dayjs": "^1.11.10",
     "obscenity": "^0.2.1",
     "react": "^18.3.1",
