--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -8,5 +8,5 @@
     "jsxImportSource": "react"
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./__tests__/**/*"],
 }
