chore: port other config changes from empires

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,10 +22,10 @@
     "@latticexyz/faucet": "2.0.9",
     "@latticexyz/store": "2.0.9",
     "@latticexyz/world-modules": "2.0.9",
+    "@primodiumxyz/contracts": "workspace:*",
     "@primodiumxyz/reactive-tables": "^3.3.1",
     "@primodiumxyz/sync-stack": "^0.6.9",
     "abitype": "^1.0.2",
-    "contracts": "workspace:*",
     "dayjs": "^1.11.10",
     "obscenity": "^0.2.1",
     "react": "^18.3.1",
