--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "turbo build",
     "clean:indexer": "pnpm clean-local-docker-indexer",
     "dev:indexer": "pnpm clean-local-docker-indexer && pnpm local-docker-indexer",
-    "build:contracts": "turbo --filter @primodiumxyz/contracts build"
+    "build:contracts": "turbo --filter @primodiumxyz/contracts build",
+    "build:webapp": "turbo --filter @primodiumxyz/webapp build"
   },
   "keywords": [],
   "author": "",
