--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,11 +15,13 @@
     "@heroicons/react": "^2.1.4",
     "@latticexyz/common": "2.0.9",
     "@latticexyz/faucet": "2.0.9",
+    "@primodiumxyz/contracts": "workspace:*",
     "@primodiumxyz/core": "workspace:*",
     "@primodiumxyz/reactive-tables": "^3.3.1",
-    "@primodiumxyz/contracts": "workspace:*",
     "@privy-io/react-auth": "^1.72.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
