fix: add contracts private key to .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,7 @@ PRI_DEV="true"
 PRI_WALLETCONNECT_PROJECT_ID=
 PRI_ACCOUNT_LINK_VERCEL_URL=
 # PRI_ACCOUNT_LINK_VERCEL_URL="http://localhost:3002"
+# client dev burner account
 PRI_DEV_PKEY=
+# contracts deployer
+PRIVATE_KEY=
