chore: add type module

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "license": "ISC",
   "author": "",
+  "type": "module",
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
