--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,8 +15,10 @@
     "@heroicons/react": "^2.1.4",
     "@latticexyz/common": "2.0.9",
     "@latticexyz/faucet": "2.0.9",
+    "@primodiumxyz/assets": "workspace:*",
     "@primodiumxyz/contracts": "workspace:*",
     "@primodiumxyz/core": "workspace:*",
+    "@primodiumxyz/game": "workspace:*",
     "@primodiumxyz/reactive-tables": "^3.4.0",
     "@privy-io/react-auth": "^1.72.0",
     "class-variance-authority": "^0.7.0",
