--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.9.2",
+    "@fontsource/silkscreen": "^5.0.20",
+    "@fontsource/space-mono": "^5.0.20",
     "@heroicons/react": "^2.1.4",
     "@latticexyz/common": "2.0.9",
     "@latticexyz/faucet": "2.0.9",
