--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,6 +51,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-hero-patterns": "^0.1.2",
     "typescript": "^5.5.2",
     "vite": "^5.3.1",
     "vite-plugin-comlink": "^3.0.5",
