chore: add engine to game

--- a/packages/game/package.json
+++ b/packages/game/package.json
@@ -18,6 +18,7 @@
     "@primodiumxyz/assets": "workspace:*",
     "@primodiumxyz/core": "workspace:*",
     "@primodiumxyz/contracts": "workspace:*",
+    "@primodiumxyz/engine": "workspace:*",
     "@primodiumxyz/reactive-tables": "^3.5.0"
   }
 }
