--- a/packages/game/tsconfig.json
+++ b/packages/game/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "extends": "../../.tsconfigs/bundler/dom/library-monorepo.json",
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "strict": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "emitDeclarationOnly": true,
     "paths": {
       "@game/*": ["./src/*"],
       "@client/*": ["../../apps/web/src/*"]
