--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -9,4 +9,5 @@
   },
   "exclude": ["node_modules", "dist"],
   "include": ["./src/**/*", "./__tests__/**/*"],
+  "references": [{ "path": "../engine" }, { "path": "../game" }]
 }
