fix: stop game from rendering multiple times

--- a/packages/game/tsconfig.json
+++ b/packages/game/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../.tsconfigs/bundler/dom/library-monorepo.json",
   "compilerOptions": {
     "allowImportingTsExtensions": true,
-    "strict": true,
+    "strict": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
