wip: render basic planets

--- a/packages/game/tsconfig.json
+++ b/packages/game/tsconfig.json
@@ -2,16 +2,12 @@
   "extends": "../../.tsconfigs/bundler/dom/library-monorepo.json",
   "compilerOptions": {
     "allowImportingTsExtensions": true,
-    "strict": false,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "esModuleInterop": true,
     "emitDeclarationOnly": true,
     "paths": {
       "@game/*": ["./src/*"],
       "@client/*": ["../../apps/web/src/*"]
     }
   },
-  "references": [{ "path": "../../apps/web" }, { "path": "../../packages/engine" }],
+  "references": [{ "path": "../../apps/web" }],
   "exclude": ["node_modules", "dist"]
 }
