--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -9,5 +9,5 @@
   },
   "exclude": ["node_modules", "dist"],
   "include": ["./src/**/*", "./__tests__/**/*", "../game/src/lib/tables/KeybindTable.ts", "../game/src/lib/tables/VolumeTable.ts"],
-  "references": [{ "path": "../engine" }, { "path": "../game" }]
+  "references": [{ "path": "../engine" }, { "path": "../game" }, { "path": "../contracts"}]
 }
