--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -8,5 +8,5 @@
     "jsxImportSource": "react"
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["./src/**/*", "./__tests__/**/*"]
+  "include": ["./src/**/*", "./__tests__/**/*", "vitest.config.ts"]
 }
