fix: remove test in webapp since none exist

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,7 +14,7 @@
     "src"
   ],
   "scripts": {
-    "test": "vitest"
+    "test": "vitest --run"
   },
   "dependencies": {
     "@latticexyz/block-logs-stream": "2.0.9",
