--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,8 +7,7 @@
     "build": "vite build",
     "dev": "vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "vitest"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.9.2",
