--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "pnpm eslint --cache --fix .",
     "prepare": "husky && husky install",
     "sort-package-json": "npx sort-package-json package.json 'packages/*/package.json' 'apps/*/package.json'",
-    "test": "pnpm recursive run test"
+    "test": "turbo test"
   },
   "lint-staged": {
     "*.{ts,tsx,css,md,mdx,sol}": "prettier --write",
