--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "src/index.ts",
   "dependencies": {
-    "phaser": "^3.80.1",
+    "phaser": "^3.85.0-beta.2",
     "rxjs": "^7.8.1",
     "zustand": "^4.4.7"
   },
