--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
       "persistent": true
     },
     "build": {
-      "outputs": ["dist/**"]
+      "outputs": ["dist/**", "out/**"]
     },
     "check-types": {
       "dependsOn": ["^check-types"]
