feat: run deploy script on merge to sprint/v*

--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -3,6 +3,7 @@ name: Auto-deploy on merge to release/v* and main branches
 on:
   push:
     branches:
+      - "sprint/v*"
       - "release/v*"
       - "main"
 
