--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -46,5 +46,6 @@ jobs:
       - name: Commit changes
         run: |
           git add packages/contracts/worlds.json
+          git add packages/contracts/out/IWorld.sol
           git commit -m "chore: update worlds.json with latest deployment"
           git push origin ${{ github.ref }}
