--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -36,7 +36,7 @@ jobs:
         run: pnpm --filter contracts run build
 
       - name: Deploy to Caldera Sepolia
-        run: pnpm deploy:caldera-sepolia
+        run: pnpm -filter contracts deploy:caldera-sepolia
 
       - name: Set up Git
         run: |
