--- a/turbo.json
+++ b/turbo.json
@@ -1,9 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": [
-    "packages/contracts/worlds.json",
-    "packages/assets/maps/**"
-  ],
+  "globalDependencies": ["packages/contracts/worlds.json"],
   "tasks": {
     "//#dev:indexer": {
       "cache": false,
