--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -32,8 +32,7 @@
     "@latticexyz/world-modules": "2.0.9",
     "dotenv": "^16.3.1",
     "tsx": "^3.12.8",
-    "viem": "2.9.20",
-    "xml2js": "^0.6.2"
+    "viem": "2.9.20"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^10.2.0",
