--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.cursorignore
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # misc
