--- a/packages/game/.prettierrc
+++ b/packages/game/.prettierrc
@@ -15,7 +15,7 @@
     "<THIRD_PARTY_MODULES>",
     "",
     "^@primodiumxyz/(.*)$",
-    "^@/(.*)$",
+    "^@game/(.*)$",
     "",
     "^[./]"
   ],
