--- a/packages/game/package.json
+++ b/packages/game/package.json
@@ -24,9 +24,7 @@
     "react": "^18.3.1"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@types/lodash": "^4.17.7",
-    "@types/react": "^18.3.3",
-    "prettier": "^3.3.2"
+    "@types/react": "^18.3.3"
   }
 }
