--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -2,8 +2,8 @@
 solc_version = "0.8.24"
 ffi = false
 fuzz_runs = 256
-# optimizer = true
-# optimizer_runs = 3000
+optimizer = true
+optimizer_runs = 10
 verbosity = 2
 src = "src"
 test = "test"
