feat: full dwp without tooltip

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@primodiumxyz/game": "workspace:*",
     "@primodiumxyz/reactive-tables": "^3.5.4",
     "@privy-io/react-auth": "^1.72.0",
+    "@visx/axis": "^3.10.1",
     "@visx/curve": "^3.3.0",
     "@visx/event": "^3.3.0",
     "@visx/gradient": "^3.3.0",
