--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # chains are "dev", "lattice", "caldera"
 PRI_CHAIN_ID="dev"
 PRI_DEV="true"
+PRI_PLAYTEST="false" # need to provide a password to show cheatcodes
+PRI_PLAYTEST_PASSWORD="plsgivemecheatcodes" # password to show cheatcodes: http://localhost:3000/game?cheatcodesPassword=plsgivemecheatcodes
 PRI_WALLETCONNECT_PROJECT_ID=
 PRI_ACCOUNT_LINK_VERCEL_URL=
 # PRI_ACCOUNT_LINK_VERCEL_URL="http://localhost:3002"
