--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,6 +41,7 @@
     "framer-motion": "^11.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^10.0.5",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
@@ -52,6 +53,7 @@
     "@types/d3": "^7.4.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-scroll-to-bottom": "^4.2.5",
     "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
