--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -8,12 +8,11 @@
     "jsxImportSource": "react"
   },
   "exclude": ["node_modules", "dist"],
-  "include": [, "../../apps/web/src/hooks/usePlayerAccount.ts"
+  "include": [
     "./src/**/*",
     "./__tests__/**/*",
     "../game/src/lib/tables/KeybindTable.ts",
-    "../game/src/lib/tables/VolumeTable.ts",
-    "../../apps/web/src/hooks/providers/PlayerAccountProvider.tsx"
+    "../game/src/lib/tables/VolumeTable.ts"
   ],
   "references": [{ "path": "../engine" }, { "path": "../game" }, { "path": "../contracts" }]
 }
