--- a/.cursorignore
+++ b/.cursorignore
@@ -1,5 +1,5 @@
 # Add directories or file patterns to ignore during indexing (e.g. foo/ or *.csv)
-*.env
+.env
 ./packages/contracts/.env
 ./packages/contracts/broadcast/
 ./packages/contracts/cache
