--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,17 +24,21 @@
     "@primodiumxyz/game": "workspace:*",
     "@primodiumxyz/reactive-tables": "^3.5.5",
     "@privy-io/react-auth": "^1.72.0",
+    "@visx/axis": "^3.10.1",
     "@visx/curve": "^3.3.0",
+    "@visx/event": "^3.3.0",
     "@visx/gradient": "^3.3.0",
+    "@visx/grid": "^3.5.0",
+    "@visx/mock-data": "^3.3.0",
     "@visx/responsive": "^3.10.2",
     "@visx/scale": "^3.5.0",
     "@visx/shape": "^3.5.0",
+    "@visx/tooltip": "^3.3.0",
     "@visx/vendor": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "framer-motion": "^11.2.14",
-    "lightweight-charts": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scroll-to-bottom": "^4.2.0",
