--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ PRI_WALLETCONNECT_PROJECT_ID=
 PRI_ACCOUNT_LINK_VERCEL_URL=
 # PRI_ACCOUNT_LINK_VERCEL_URL="http://localhost:3002"
 PRI_DEV_PKEY=
+
+KEEPER_HOST=
+KEEPER_PORT=
+KEEPER_PRIVATE_KEY=
