--- a/apps/_keeper/tsconfig.json
+++ b/apps/_keeper/tsconfig.json
@@ -5,10 +5,9 @@
 
     "paths": {
       "@/*": ["./src/*"],
-      "@bin/*": ["./bin/*"]
+      "@core/*": ["../../packages/core/src/*"]
     }
   },
   "include": ["**/*.ts"],
-  "exclude": ["node_modules", "dist"],
-  "references": [{ "path": "../../packages/core" }]
+  "exclude": ["node_modules", "dist"]
 }
