chore: turbo config for keeper

--- a/apps/keeper/tsconfig.json
+++ b/apps/keeper/tsconfig.json
@@ -5,7 +5,8 @@
 
     "paths": {
       "@/*": ["./src/*"],
-      "@bin/*": ["./bin/*"]
+      "@bin/*": ["./bin/*"],
+      "@core/*": ["../../packages/core/src/*"]
     }
   },
   "include": ["**/*.ts"],
