--- a/apps/keeper/package.json
+++ b/apps/keeper/package.json
@@ -10,9 +10,12 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": "./dist/src/index.js"
+    ".": "./src/index.ts"
   },
   "types": "src/index.ts",
+  "files": [
+    "src"
+  ],
   "bin": {
     "keeper-server": "./dist/bin/keeper-server.js"
   },
