--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Generate dedicated lockfile
-        run: pnpx @pnpm/make-dedicated-lockfile
+        run: pnpm dlx @pnpm/make-dedicated-lockfile
 
       - name: Build Docker image
         run: docker build -t keeper:latest ./apps/keeper
