--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,16 +18,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Install pnpm and dependencies
-        run: |
-          npm install -g pnpm@8
-          pnpm install --frozen-lockfile
+      # - name: Install pnpm and dependencies
+      #   run: |
+      #     npm install -g pnpm@8
+      #     pnpm install --frozen-lockfile
 
-      - name: Generate dedicated lockfile
-        run: cd apps/keeper && pnpm dlx @pnpm/make-dedicated-lockfile@0.5.13
+      # - name: Generate dedicated lockfile
+      #   run: cd apps/keeper && pnpm dlx @pnpm/make-dedicated-lockfile@0.5.13
 
       - name: Build Docker image
-        run: docker build -t keeper:latest ./apps/keeper
+        run: docker build -t keeper:latest -f ./apps/keeper/Dockerfile --dockerignore ./apps/keeper/.dockerignore ./apps/keeper
 
       - name: Save Docker image
         run: docker save keeper:latest > image.tar
