--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,9 +36,14 @@ jobs:
       - name: Load and run Docker image on EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key ${EC2_USER}@${EC2_HOST} '
-            # Install Docker
-            sudo amazon-linux-extras install docker
-            sudo service docker start
+            # RUN THE FOLLOWING IF THE MACHINE IS Amazon Linux
+            # Update package list and install Docker
+            sudo dnf update -y
+            sudo dnf install docker -y
+            # Start Docker service
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            # Add ec2-user to docker group
             sudo usermod -a -G docker ec2-user
 
             sudo docker load < image.tar
