--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,7 +43,7 @@ jobs:
             sudo docker rm keeper-container || true
 
             # Run the new container
-            sudo docker run -p 3002:3002 \
+            sudo docker run -d -p 3002:3002 \
               --name keeper-container \
               -e KEEPER_HOST="0.0.0.0" \
               -e KEEPER_PORT="3002" \
