refactor: remove cheatcodes password & add keeper password cheatcode

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - sprint/*
       - release/*
+      - 0xpolarzero/pri-1065-infra-keeper
   workflow_dispatch:
 
 jobs:
@@ -47,7 +48,7 @@ jobs:
               -e KEEPER_HOST="0.0.0.0" \
               -e KEEPER_PORT="3002" \
               -e KEEPER_PRIVATE_KEY="'$KEEPER_PRIVATE_KEY'" \
-              -e PRI_KEEPER_BEARER_TOKEN="'$PRI_KEEPER_BEARER_TOKEN'" \
+              -e KEEPER_BEARER_TOKEN="'$KEEPER_BEARER_TOKEN'" \
               keeper:latest
           '
         env:
@@ -55,7 +56,7 @@ jobs:
           EC2_USER: ${{ secrets.EC2_USER }}
           EC2_HOST: ${{ secrets.EC2_HOST }}
           KEEPER_PRIVATE_KEY: ${{ secrets.KEEPER_PRIVATE_KEY }}
-          PRI_KEEPER_BEARER_TOKEN: ${{ secrets.PRI_KEEPER_BEARER_TOKEN }}
+          KEEPER_BEARER_TOKEN: ${{ secrets.KEEPER_BEARER_TOKEN }}
 
       - name: Clean up Artifacts
         run: |
